# Trabalho-2-persistencia

./: .env.example  .gitignore  README.md  divisao_tarefas.txt  pyproject.toml
migrations/: env.py
migrations/versions/: 044784c3d055_adicionar_quantidade_para_tabela_.py  06651807b851_criar_tabela_aluno.py  21a9b4c49dce_adiconar_valor_para_a_tabela_produto_.py  2d40661bd977_tirando_tpo_de_transacao.py  3b9e2564f710_tirando_tpo_de_transacao.py  8c46dba2f60c_tirando_tpo_de_transacao.py  d7c149b6b5ae_criar_tabelas.py
projeto-T2/: .gitignore  main.py  meu_banco.db  pyproject.toml
projeto-T2/migrations/: env.py
projeto-T2/migrations/versions/: 02fc4b55b9c1_add_relacionamento_fornecedor_produto.py  076cee00b057_tirando_tpo_de_transacao.py  08382547f73e_tirando_tpo_de_transacao.py  0da4bed21c13_inicio.py  171bd9475f87_inicio2.py  485febb0a539_mudanca_no_banco.py  49882e02a12a_teste.py  5b8dc5ea9b69_inicio4.py  783a76812c3b_mudanca_no_banco.py  785fcf96dec9_tirando_tpo_de_transacao.py  a4752ceaeae5_tirando_tpo_de_transacao.py  db4954e35327_add_relacionamento_fornecedor_produto.py  de50405c8106_tirando_tpo_de_transacao.py  (+3 more)
projeto-T2/src/: main.py  popularBD.py
src/: main.py  popularBD.py
src/database/: database.py
src/dtos/: createTransacaoDTO.py  pagination.py  transacaoRespostaDTO.py  updateTransacaoDTO.py
src/models/: ProdutoTransacaoFornecedor.py  fornecedor.py  produto.py  transacao.py
src/routers/: fornecedor_router.py  produto_router.py  transacao_router.py
src/services/: fornecedor_service.py  produto_service.py  transacao_service.py
(+14 files in other folders)
