[project]
name = "projeto-t2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
